@@ -6102,10 +6102,10 @@ sub del_att
 
 sub att_exists { return exists  $_[0]->{att}->{$_[1]}; }
 
-# delete an attribute from all descendants of an element
+# delete one or more attributes from all descendants of an element
 sub strip_att
-  { my( $elt, $att)= @_;
-    $_->del_att( $att) foreach ($elt->descendants_or_self( qq{*[\@$att]}));
+  { my( $elt, @att)= @_;
+    $_->del_att( @att) foreach ($elt->descendants_or_self);
     return $elt;
   }
 
@@ -12200,11 +12200,11 @@ You can set several attributes at once:
 
 Returns the calling element.
 
-=item del_att ($att)
+=item del_att (@att)
 
-Deletes the attribute for the element.
+Deletes one or more attributes for the element.
 
-You can delete several attributes at once:
+You can actually delete several attributes at once:
 
   $elt->del_att( 'att1', 'att2', 'att3');
 
@@ -12692,9 +12692,10 @@ By default, the id generated by C<L<add_id>> is C<< twig_id_<nnnn> >>,
 C<set_id_seed> changes the prefix to C<$prefix> and resets the number
 to 1.
 
-=item strip_att ($att)
+=item strip_att (@att_list)
 
-Removes the attribute C<$att> from the calling element and all its descendants.
+Removes the attributes in C<@att_list> from the calling element and all
+its descendants.
 
 Returns the calling element.
 
